# MinimalBoilerplateSerializationLibrary

./: .clang-format  .clang-tidy  .cmake-format.yaml  CMakeLists.txt
example/: CMakeLists.txt
example/config/: simple_example.mbsl
example/src/: main.cpp
generator/res/: template.txt
generator/src/: library_template.cppm  main.cpp  parser.cpp  parser.cppm  writer.cpp  writer.cppm
src/: main.cpp
